[package]
name = "scc-rust"
version = "0.1.0"
authors = ["josieoharrow"]
edition = "2021"

[dependencies]
# petgraph = { git = 'https://github.com/josieoharrow/petgraph'}
petgraph = { path = "../petgraph" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
